# bodha

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  index.html  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/bodha/: __init__.py  cli.py  models.py  report.py
src/bodha/levels/: __init__.py  elementary.py  expert.py  general.py  middle.py
src/bodha/simplifier/: __init__.py  analyzer.py  simplifier.py  summarizer.py
tests/: test_benchmark.py  test_bodha.py  test_core.py  test_integration.py
