[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bodha"
version = "0.1.0"
description = "Bodha - AI Document Simplifier for multiple reading levels"
authors = [{ name = "Mukunda Katta" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
bodha = "bodha.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
